<resources>
    <string name="app_name">QRServer</string>
    <string name="action_settings">Settings</string>
    <string name="Button_Insert">新增</string>
    <string name="Button_ViewData">顯示資料</string>
    <string name="Button_DeleteData">刪除資料</string>
    <string name="pull_to_refresh">下拉刷新資料</string>
    <string name="release_to_refresh">放開立即刷新</string>
    <string name="refreshing">QR資料正在刷新…</string>
    <string name="not_updated_yet">暫未更新過</string>
    <string name="updated_at">上次更新於%1$s前</string>
    <string name="updated_just_now">剛剛更新</string>
    <string name="time_error">時間有問題</string>
    <string name="hi">刪除</string>
    <string name="cancel">取消</string>
    <string name="cancel_data">取消刪除</string>
    <string name="confirm">確認</string>
    <string name="Datd_Null">刪除失敗，輸入空值</string>
    <string name="Button_FindData">搜尋資料</string>
    <string name="cancel_data_find">取消搜尋</string>
    <string name="search">搜尋</string>
    <string name="Find_Datd_Null">搜尋失敗，輸入空值</string>
    <string name="login_user_hint">帳號</string>
    <string name="login_passwd_hint">密碼</string>
    <string name="login_login">登入</string>
    <string name="login_signup">新增帳號</string>
    <string name="login_v2ex_description">QRCode管理系統</string>
    <string name="Insert_login_user_hint">新增帳號</string>
    <string name="Insert_login_passwd_hint">新增密碼</string>
    <string name="Insert_login_login">新增帳號</string>
    <string name="Insert_false">新增資料不完全</string>
    <string name="Insert_description">QRCode新增帳戶管理，擁有個人化資料</string>
    <string name="Longin_success">登入成功</string>
    <string name="Longin_fail">登入失敗</string>
    <string name="cancel_scan">登入失敗</string>
    <string name="Del_setTitle">刪除資料的ID：</string>
    <string name="View_setTitle">QR資料：</string>
    <string name="Data">資料：</string>
    <string name="Id">QRId：</string>
    <string name="noData">尚未新增資料</string>
</resources>
