<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    >

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/smallpic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_v2ex_description"
        android:gravity="center"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/edt_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:textColor="#222222"
        android:hint="@string/login_user_hint" />

    <EditText
        android:id="@+id/edt_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_passwd_hint"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="#222222"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_lgoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/login_login"/>

    <TextView
        android:id="@+id/login_sign_up_txt"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_signup"
        android:textSize="14sp"
        android:textColor="#555"
        android:onClick="Insert_Account" />


</LinearLayout>