<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    >

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/smallpic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Insert_description"
        android:gravity="center"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/edt_Insert_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:textColor="#222222"
        android:hint="@string/Insert_login_user_hint" />

    <EditText
        android:id="@+id/edt_Insert_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insert_login_passwd_hint"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="#222222"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_Insert_lgoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/Insert_login_login"/>

</LinearLayout>